# stackstac

./: .flake8  .gitattributes  .gitignore  .pdm-python  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  README.md  conftest.py  pyproject.toml  pyrightconfig.json  santafe.json  test.py
binder/: postBuild  requirements.txt
docs/: .gitignore  basic.ipynb  conf.py  index.rst
docs/api/: internal.rst  main.rst
examples/: gif.py  index.rst  show.ipynb
scripts/: coiled-envs.py  coiled-notebook.py  make-coiled-env.sh
stackstac/: __init__.py  accumulate_metadata.py  bits.py  coordinates.py  coordinates_utils.py  geom_utils.py  gif.py  nodata.py  nodata_reader.py  ops.py  prepare.py  raster_spec.py  reader_protocol.py  rio_env.py  rio_reader.py  show.py  stac_types.py  stack.py  timer.py  to_dask.py
stackstac/testing/: strategies.py
stackstac/tests/: items-landsat-c2-l2.json  test_accumulate_metadata.py  test_coordinates.py  test_coordinates_utils.py  test_mosaic.py  test_rio_reader.py  test_stac_items.json  test_stac_types.py  test_to_dask.py
typings/satstac/: __init__.pyi  catalog.pyi  cli.pyi  collection.pyi  item.pyi  itemcollection.pyi  thing.pyi  utils.pyi  version.pyi
