[tool.poetry]
authors = ["Gabe Joseph <gjoseph92@gmail.com>"]
description = "Load a STAC collection into xarray with dask"
homepage = "https://stackstac.readthedocs.io/en/latest/index.html"
license = "MIT"
name = "stackstac"
readme = "README.md"
repository = "https://github.com/gjoseph92/stackstac"
version = "0.1.1"

[tool.poetry.dependencies]
Bottleneck = {version = "^1.3.2", optional = true}
Pillow = {version = "^8.1.2", optional = true}
Sphinx = {version = "^3.5.4", optional = true}
aiohttp = {version = "^3.7.4", optional = true}
cachetools = {version = "^4.2.2", optional = true}
coiled = {version = "^0.0.39.1", optional = true}
dask = {extras = ["array"], version = "^2021.4.1"}
dask-labextension = {version = "^5.0.1", optional = true}
distributed = {version = "^2021.4.1", optional = true}
geogif = {version = "^0.1.0", optional = true}
insipid-sphinx-theme = {version = "^0.2.3", optional = true}
ipyleaflet = {version = "^0.13.6", optional = true}
ipython = {version = "^7.20.0", optional = true}
ipywidgets = {version = "^7.6.3", optional = true}
jupyter-sphinx = {version = "^0.3.2", optional = true}
jupyterlab-geojson = {version = "^3.1.2", optional = true}
matplotlib = {version = "^3.4.1", optional = true}
mercantile = {version = "^1.1.6", optional = true}
nbsphinx = {version = "^0.8.2", optional = true}
numpy = "^1.20.0"
numpydoc = {version = "^1.1.0", optional = true}
pandoc = {version = "^1.0.2", optional = true}
planetary-computer = {version = "^0.1.0", optional = true}
pyproj = "^3.0.0"
pystac-client = {version = "^0.1.1", optional = true}
python = "^3.8"
rasterio = "^1.2.3"
sat-search = {version = "^0.3.0", optional = true}
scipy = "^1.6.1"
sphinx-autodoc-typehints = {version = "^1.11.1", optional = true}
xarray = "^0.17.0"

[tool.poetry.dev-dependencies]
Pympler = "^0.9"
awkward = {version = "^1.1.2", allow-prereleases = true}
black = "^21.4b2"
debugpy = "^1.2.1"
filprofiler = "^0.17.0"
flake8 = "^3.9.1"
graphviz = "^0.16"
jupyterlab = "^3.0.14"
keyring = "^23.0.1"
py-spy = "^0.3.4"
pystac = "^0.5.4"
snakeviz = "^2.1.0"
sphinx-autobuild = "^2021.3.14"
twine = "^3.4.1"

[tool.poetry.extras]
binder = [
  "Bottleneck",
  "coiled",
  "dask-labextension",
  "distributed",
  "geogif",
  "ipyleaflet",
  "ipywidets",
  "jupyterlab-geojson",
  "matplotlib",
  "planetary-computer",
  "pystac-client",
  "sat-search",
]
docs = [
  "insipid-sphinx-theme",
  "ipyleaflet",
  "ipython",
  "jupyter-sphinx",
  "nbsphinx",
  "numpydoc",
  "pandoc",
  "sphinx-autodoc-typehints",
  "Sphinx",
]
viz = [
  "aiohttp",
  "cachetools",
  "distributed",
  "ipyleaflet",
  "matplotlib",
  "mercantile",
  "Pillow",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
