[tool.poetry]
authors = ["Gabe Joseph <gjoseph92@gmail.com>"]
description = "Load a STAC collection into xarray with dask"
homepage = "https://stackstac.readthedocs.io/en/latest/index.html"
license = "MIT"
name = "stackstac"
readme = "README.md"
repository = "https://github.com/gjoseph92/stackstac"
version = "0.4.2"

[tool.poetry.dependencies]
Bottleneck = {version = "^1.3.2", optional = true}
Pillow = {version = "^9.0.1", optional = true}
Sphinx = {version = "^5.0.2", optional = true}
aiohttp = {version = "^3.7.4", optional = true}
cachetools = {version = "^4.2.2", optional = true}
coiled = {version = "^0", optional = true, python = "<3.10"}
dask = {extras = ["array"], version = "^2022.1.1"}
distributed = {version = "^2022.1.1", optional = true}
furo = {version = "^2022.6.21", optional = true}
geogif = {version = "^0", optional = true}
ipyleaflet = {version = "^0.13.6", optional = true}
ipython = {version = "^7.20.0", optional = true}
ipywidgets = {version = "^7.6.3", optional = true}
jupyter-server-proxy = {version = "^3.2.0", optional = true}
jupyter-sphinx = {version = "^0.4.0", optional = true}
jupyterlab-geojson = {version = "^3.1.2", optional = true}
jupyterlab-system-monitor = {version = "^0.8.0", optional = true}
matplotlib = {version = "^3.4.1", optional = true}
mercantile = {version = "^1.1.6", optional = true}
nbsphinx = {version = "^0.8.9", optional = true}
numpydoc = {version = "^1.4.0", optional = true}
pandoc = {version = "^2.2", optional = true}
planetary-computer = {version = ">= 0.4.3, < 1", optional = true}
pyproj = "^3.0.0"
pystac-client = {version = "^0.3", optional = true}
python = "^3.8"
rasterio = "^1.3.0"
sat-search = {version = "^0.3.0", optional = true}
scipy = {version = "^1.6.1", optional = true}
sphinx-autodoc-typehints = {version = "^1.18.3", optional = true}
xarray = ">=0.18"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
dask-labextension = {version = "^5.0.1"}
flake8 = "^4.0.1"
graphviz = "^0.16"
hypothesis = "^6.35.0"
jupyterlab = "^3.0.14"
keyring = "^23.0.1"
py-spy = "*"
pystac = "^1"
pytest = "^6.2.5"
scheduler-profilers = {git = "https://github.com/gjoseph92/scheduler-profilers.git", rev = "main"}
snakeviz = "^2.1.0"
sphinx-autobuild = "^2021.3.14"
twine = "^3.4.1"

[tool.poetry.extras]
binder = [
  "Bottleneck",
  "coiled",
  "distributed",
  "geogif",
  "ipyleaflet",
  "ipywidgets",
  "jupyterlab-geojson",
  "jupyter-server-proxy",
  "jupyterlab-system-monitor",
  "matplotlib",
  "planetary-computer",
  "pystac-client",
  "sat-search",
]
docs = [
  "furo",
  "ipyleaflet",
  "ipython",
  "jupyter-sphinx",
  "nbsphinx",
  "numpydoc",
  "pandoc",
  "sphinx-autodoc-typehints",
  "Sphinx",
]
viz = [
  "aiohttp",
  "cachetools",
  "distributed",
  "ipyleaflet",
  "jupyter-server-proxy",
  "matplotlib",
  "mercantile",
  "Pillow",
  "scipy",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
