[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Gabe Joseph", email = "gjoseph92@gmail.com"},
]
dependencies = [
    "dask[array]>=2022.1.1",
    "pyproj<4.0.0,>=3.0.0",
    "rasterio<2.0.0,>=1.3.0",
    "xarray>=0.18",
]
description = "Load a STAC collection into xarray with dask"
license = {text = "MIT"}
name = "stackstac"
readme = "README.md"
requires-python = ">=3.8,<4.0"
version = "0.5.0"

[project.urls]
homepage = "https://stackstac.readthedocs.io/en/latest/index.html"
repository = "https://github.com/gjoseph92/stackstac"

[project.optional-dependencies]
viz = [
    "Pillow<10.0.0,>=9.0.1",
    "aiohttp<4.0.0,>=3.7.4",
    "distributed>=2022.1.1",
    "cachetools<5.0.0,>=4.2.2",
    "mercantile<2.0.0,>=1.1.6",
    "scipy<2.0.0,>=1.6.1",
    "ipyleaflet<1.0.0,>=0.13.6",
    "ipywidgets<8.0.0,>=7.6.3",
    "matplotlib>=3.4.1",
    "jupyter-server-proxy>=3.2",
]

[tool.pdm.dev-dependencies]
docs-examples = [
    "Bottleneck>=1.3.2",
    "coiled>=0.2.50",
    "geogif>=0",
    "jupyterlab-geojson>=3.1.2",
    "jupyterlab-system-monitor>=0.8.0",
    "planetary-computer>=0.4.3",
    "pystac-client>=0.3",
    "dask-labextension>=5.0.1",
    "jupyterlab>=3.0.14",
]
docs = [
    "Sphinx<6.0.0,>=5.0.2",
    "furo<2023.0.0.0,>=2022.6.21",
    "ipython<8.0.0,>=7.20.0",
    "jupyter-sphinx<1.0.0,>=0.4.0",
    "nbsphinx<1.0.0,>=0.8.9",
    "numpydoc<2.0.0,>=1.4.0",
    "pandoc<3.0.0,>=2.2",
    "sphinx-autodoc-typehints<2.0.0,>=1.18.3",
    "sphinx-paramlinks>=0.5.4",
]
style = [
    "flake8<5.0.0,>=4.0.1",
    "black<23.0.0,>=22.3.0",
]
test = [
    "hypothesis<7.0.0,>=6.35.0",
    "pytest<7.0.0,>=6.2.5",
    "sat-search>=0.3.0",
]
util = [
    "py-spy",
    "pystac>=1",
    "graphviz>=0.16",
    "snakeviz>=2.1.0",
    "sphinx-autobuild>=2021.3.14",
    "twine>=3.4.1",
    "dask-pyspy>=0.4.0",
]

[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517"]
